--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -82,7 +82,7 @@ a[data-title]:hover:after {
     position: absolute;
     top: 250%;
     white-space: nowrap;
-    z-index: 20px;
+    z-index: 20;
     @include border-radius(5px);
     @include box-shadow(0px 0px 4px #222);
 }
